Deployment from Statiq

--- a/beacons/monitoring.html
+++ b/beacons/monitoring.html
@@ -105,9 +105,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -311,6 +308,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,55 +327,79 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Beacon monitoring is quite a bit different than ranging.  Monitoring does not provide distance and has many limitations, but it works in the background.  Monitoring uses beacon regions much like ranging, however, the region is all that is returned in the delegate to protect user privacy
 Monitoring is limited to a maximum of 20 regions on iOS.  On Android &amp; UWP, there currently isn't a limit HOWEVER the BLE scans do emit quite a number of scan packets.  If you have too many, your scan will slow down your app quite a bit.</p>
-<table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Beacons/" target="Shiny.Beacons"><img src="https://img.shields.io/nuget/v/Shiny.Beacons.svg?style=for-the-badge&amp;label=Shiny.Beacons"></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Beacons.IBeaconMonitorManager</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseBeaconMonitoring</td>
-</tr>
-<tr>
-<td><strong>Delegate</strong></td>
-<td>Shiny.Beacons.IBeaconMonitorDelegate (Required)</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyBeaconMonitorManager</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9 (<a href="/setup/ios">OS Configuration Required</a>)</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+<div class="tab-wrap">
+<input type="radio" id="2108ad44e7d442839f2e57400158bd57-1f5efaf2e5804ddb939b4d89a27be8dd" name="2108ad44e7d442839f2e57400158bd57" class="tab" checked=""><label for="2108ad44e7d442839f2e57400158bd57-1f5efaf2e5804ddb939b4d89a27be8dd">General</label>
+<input type="radio" id="2108ad44e7d442839f2e57400158bd57-dd2de81e78574f9a8134fe42d461878f" name="2108ad44e7d442839f2e57400158bd57" class="tab"><label for="2108ad44e7d442839f2e57400158bd57-dd2de81e78574f9a8134fe42d461878f">Startup</label>
+<input type="radio" id="2108ad44e7d442839f2e57400158bd57-075a205365264e319df087afcbadcc10" name="2108ad44e7d442839f2e57400158bd57" class="tab"><label for="2108ad44e7d442839f2e57400158bd57-075a205365264e319df087afcbadcc10">Android</label>
+<input type="radio" id="2108ad44e7d442839f2e57400158bd57-304a470e727d4412b327ed7ebce10101" name="2108ad44e7d442839f2e57400158bd57" class="tab"><label for="2108ad44e7d442839f2e57400158bd57-304a470e727d4412b327ed7ebce10101">iOS</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Beacons.IBeaconMonitorManager
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Beacons/" target="Shiny.Beacons"><img src="https://img.shields.io/nuget/v/Shiny.Beacons.svg?style=for-the-badge&amp;label=Shiny.Beacons"></a>|
+|Static Generated Class|ShinyBeaconMonitorManager</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseBeaconMonitoring&amp;lt;Shiny.Beacons.IBeaconMonitorDelegate&amp;gt;();
+services.UseBeaconMonitoring 
+        }
+    }
+}
+</code></pre>
+<p></p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+<h3>AndroidManifest.xml</h3>
+<pre><code class="language-xml">&lt;?xml version="1.0" encoding="utf-8" ?&gt;
+&lt;manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.org.yourapp" android:installLocation="preferExternal"&gt;
+    &lt;uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /&gt;
+    &lt;uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /&gt;
+    &lt;uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" /&gt;
+    &lt;uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /&gt;
+    &lt;uses-permission android:name="android.permission.BLUETOOTH" /&gt;
+&lt;/manifest&gt;
+</code></pre>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+<h3>Info.plist</h3>
+<pre><code class="language-xml">&lt;?xml version="1.0" encoding="utf-8" ?&gt;
+&lt;!DOCTYPE plist PUBLIC " -//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"&gt;
+&lt;plist version="1.0"&gt;
+&lt;dict&gt;
+    &lt;key&gt;NSLocationAlwaysUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+    &lt;key&gt;NSLocationAlwaysAndWhenInUseUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+    &lt;key&gt;NSLocationWhenInUseUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+&lt;/dict&gt;
+&lt;/plist&gt;
+</code></pre>
+</div>
+</div>
 <h2 id="gotcha">Gotcha</h2>
 <ul>
 <li>Scanning for any beacons always works down to specific filter sets meaning you are adding (not mixing &amp; matching)
