--- a/appservices/gpstags.html
+++ b/appservices/gpstags.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - NuGet Packages</title>
+    <title>Shiny.NET - GPS Tags</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">NuGet Packages</div>
+                                <div class="text-white m-0 title">GPS Tags</div>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
 <a href="/quickstart">Quick Start</a>                                            </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/setup">Setup</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
@@ -105,9 +105,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/integrations">Integrations</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
@@ -302,7 +299,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/appservices">App Services</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/calldirectory">Call Directory</a>
                                                         </div>
@@ -311,6 +308,9 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
@@ -329,134 +329,19 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h2 id="packages">Packages</h2>
-<h1 id="section"></h1>
-<table>
-<thead>
-<tr>
-<th>Name</th>
-<th>Description</th>
-<th>NuGet</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Shiny.Core</strong></td>
-<td>Core Services for Shiny</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Core/" target="Shiny.Core"><img src="https://img.shields.io/nuget/v/Shiny.Core.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Core</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Core/" target="Shiny.Core"><img src="https://img.shields.io/nuget/v/Shiny.Core.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Beacons</strong></td>
-<td>iBeacon Ranging &amp; Background Monitoring</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Beacons/" target="Shiny.Beacons"><img src="https://img.shields.io/nuget/v/Shiny.Beacons.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.BluetoothLE</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.BluetoothLE/" target="Shiny.BluetoothLE"><img src="https://img.shields.io/nuget/v/Shiny.BluetoothLE.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.BluetoothLE.Hosting</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.BluetoothLE.Hosting/" target="Shiny.BluetoothLE.Hosting"><img src="https://img.shields.io/nuget/v/Shiny.BluetoothLE.Hosting.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Integrations.Sqlite</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Integrations.Sqlite/" target="Shiny.Integrations.Sqlite"><img src="https://img.shields.io/nuget/v/Shiny.Integrations.Sqlite.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Locations</strong></td>
-<td>GPS, Geofencing, &amp; Motion Activity Recogntion Services</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Logging.AppCenter</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Logging.AppCenter/" target="Shiny.Logging.AppCenter"><img src="https://img.shields.io/nuget/v/Shiny.Logging.AppCenter.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Logging.Firebase</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Logging.Firebase/" target="Shiny.Logging.Firebase"><img src="https://img.shields.io/nuget/v/Shiny.Logging.Firebase.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Net.Http</strong></td>
-<td>Background Uploads &amp; Downloads with metrics</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.NFC</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.NFC/" target="Shiny.NFC"><img src="https://img.shields.io/nuget/v/Shiny.NFC.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Notifications</strong></td>
-<td>Local Notifications</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Push</strong></td>
-<td>Native OS Poush Providers</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Push/" target="Shiny.Push"><img src="https://img.shields.io/nuget/v/Shiny.Push.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Push.AzureNotificationHubs</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Push.AzureNotificationHubs/" target="Shiny.Push.AzureNotificationHubs"><img src="https://img.shields.io/nuget/v/Shiny.Push.AzureNotificationHubs.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Push.FirebaseMessaging</strong></td>
-<td>Push Provider for Firebase Messaging</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Push.FirebaseMessaging/" target="Shiny.Push.FirebaseMessaging"><img src="https://img.shields.io/nuget/v/Shiny.Push.FirebaseMessaging.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.Sensors</strong></td>
-<td>Reactive Based Snesors</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
-<td><strong>Shiny.SpeechRecognition</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.SpeechRecognition/" target="Shiny.SpeechRecognition"><img src="https://img.shields.io/nuget/v/Shiny.SpeechRecognition.svg?style=for-the-badge" /></a></td>
-</tr>
-</tbody>
-</table>
-<h2 id="rd-party">3rd Party</h2>
-<table>
-<thead>
-<tr>
-<th>Project</th>
-<th>NuGet</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Shiny.Prism</td>
-<td><a href="https://www.nuget.org/packages/Shiny.Prism/" target="Shiny.Prism"><img src="https://img.shields.io/nuget/v/Shiny.Prism.svg?style=for-the-badge" /></a></td>
-<td>Prism integration with Shiny maintained by Dan Siegel</td>
-</tr>
-</tbody>
-</table>
+                                    <p>Beacons + GPS</p>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#section"></a></p>
-                                        </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/nuget.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/appservices/gpstags.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
