--- a/appservices/index.html
+++ b/appservices/index.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -342,6 +345,7 @@ App Services are combinations of Shiny services that lead to real world business
         <li><a href="/appservices/calldirectory">Call Directory</a></li>
         <li><a href="/appservices/datasync">Data Sync</a></li>
         <li><a href="/appservices/geodispatch">GeoDispatch</a></li>
+        <li><a href="/appservices/gpstags">GPS Tags</a></li>
         <li><a href="/appservices/locsync">Location Sync</a></li>
         <li><a href="/appservices/mediasync">Media Sync</a></li>
         <li><a href="/appservices/obd">OBD Communications</a></li>
