--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -105,9 +105,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -311,6 +308,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,7 +327,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -347,48 +350,77 @@
 </ul>
 </li>
 </ul>
-<table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&amp;label=Shiny.Net.Http"></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Net.Http.IHttpTransferManager</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseHttpTransfers</td>
-</tr>
-<tr>
-<td><strong>Delegate</strong></td>
-<td>Shiny.Net.Http.IHttpTransferDelegate (Required)</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyHttpTransfers</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9 (<a href="/setup/ios">OS Configuration Required</a>)</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+<div class="tab-wrap">
+<input type="radio" id="06b0660a9d754e75b44109a359b5a3f2-6b44e6c333ae40f9af19b4933f79998f" name="06b0660a9d754e75b44109a359b5a3f2" class="tab" checked=""><label for="06b0660a9d754e75b44109a359b5a3f2-6b44e6c333ae40f9af19b4933f79998f">General</label>
+<input type="radio" id="06b0660a9d754e75b44109a359b5a3f2-78017a47b06b4e2aa836c97494c6b353" name="06b0660a9d754e75b44109a359b5a3f2" class="tab"><label for="06b0660a9d754e75b44109a359b5a3f2-78017a47b06b4e2aa836c97494c6b353">Startup</label>
+<input type="radio" id="06b0660a9d754e75b44109a359b5a3f2-c1107bb0710b4f868bf53081c93192c0" name="06b0660a9d754e75b44109a359b5a3f2" class="tab"><label for="06b0660a9d754e75b44109a359b5a3f2-c1107bb0710b4f868bf53081c93192c0">Android</label>
+<input type="radio" id="06b0660a9d754e75b44109a359b5a3f2-43b7dfd8ee444162bdebbb22b6c9a701" name="06b0660a9d754e75b44109a359b5a3f2" class="tab"><label for="06b0660a9d754e75b44109a359b5a3f2-43b7dfd8ee444162bdebbb22b6c9a701">iOS</label>
+<input type="radio" id="06b0660a9d754e75b44109a359b5a3f2-495c744d027d4091a7486332a821c9f1" name="06b0660a9d754e75b44109a359b5a3f2" class="tab"><label for="06b0660a9d754e75b44109a359b5a3f2-495c744d027d4091a7486332a821c9f1">Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Net.Http.IHttpTransferManager
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&amp;label=Shiny.Net.Http"></a>|
+|Static Generated Class|ShinyHttpTransfers</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseHttpTransfers&amp;lt;Shiny.Net.Http.IHttpTransferDelegate&amp;gt;();
+services.UseHttpTransfers 
+        }
+    }
+}
+</code></pre>
+<p></p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+<h3>AppDelegate</h3>
+<pre><code class="language-csharp">using System;
+using Foundation;
+using Xamarin.Forms.Platform.iOS;
+using Shiny;
+</code><p><code class="language-csharp">namespace YourIosApp
+{
+[Register("AppDelegate")]
+public partial class AppDelegate : FormsApplicationDelegate
+{
+public override bool FinishedLaunching(UIApplication app, NSDictionary options)
+{
+this.ShinyFinishedLaunching(new Samples.SampleStartup());
+global::Xamarin.Forms.Forms.Init();
+this.LoadApplication(new Samples.App());
+}
+public override void HandleEventsForBackgroundUrl(UIApplication application, string sessionIdentifier, Action completionHandler) =&gt; this.ShinyHandleEventsForBackgroundUrl(sessionIdentifier, completionHandler);
+}
+}
+</code></p></pre><p></p>
+<h3>Info.plist</h3>
+<pre><code class="language-xml">&lt;?xml version="1.0" encoding="utf-8" ?&gt;
+&lt;!DOCTYPE plist PUBLIC " -//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"&gt;
+&lt;plist version="1.0"&gt;
+&lt;dict&gt;
+&lt;/dict&gt;
+&lt;/plist&gt;
+</code></pre>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 <h2 id="setup">Setup</h2>
 <ol>
 <li>Create a delegate in your shared code</li>
