--- a/index.html
+++ b/index.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -346,10 +349,10 @@ things like dependency injection &amp; logging in a structured way to your code!
 <li>BLE Client &amp; Hosting</li>
 <li>Beacons Ranging &amp; Monitoring</li>
 <li>Locations - GPS, Geofencing, &amp; Activity Monitoring (driving, walking, etc)</li>
-<li>Local Notifications</li>
 <li>Push Notification - Native, Azure Notifications Hubs, Firebase, and more</li>
 <li>Local Notifications - best of breed local notifications supporting almost all features across all of the supported platforms</li>
 <li>Near Field Communications (NFC) - easy to use NFC tag reader</li>
+<li>Sensors - every sensor available on your mobile phone is here</li>
 </ul>
 <h2 id="builds">Builds</h2>
 <table>
