--- a/locations/gps.html
+++ b/locations/gps.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html><html><head>
+﻿<!DOCTYPE html>
+<html>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/styles.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&amp;family=Roboto+Slab:wght@400;700&amp;family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet" data-no-mirror="">
+    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="/assets/css/styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet" data-no-mirror>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror=""></script>
+    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.8/dist/mermaid.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
     <title>Shiny.NET - GPS</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
@@ -103,9 +105,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/integrations">Integrations</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
@@ -311,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,54 +329,93 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really "hammer" away on your resources if you set it up wrong.</p>
-<table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge&amp;label=Shiny.Locations"></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Locations.IGpsManager</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseGps</td>
-</tr>
-<tr>
-<td><strong>Delegate</strong></td>
-<td>Shiny.Locations.IGpsDelegate</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyGps</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9 (<a href="/setup/ios">OS Configuration Required</a>)</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
+<div class="tab-wrap">
+<input type="radio" id="5f7a17b31f334f0daf2e13c0750ffde1-b3456c2fa13e4220a9714e1c276273cd" name="5f7a17b31f334f0daf2e13c0750ffde1" class="tab" checked><label for="5f7a17b31f334f0daf2e13c0750ffde1-b3456c2fa13e4220a9714e1c276273cd" >General</label>
+<input type="radio" id="5f7a17b31f334f0daf2e13c0750ffde1-5442053347d24c15a47c317840c72044" name="5f7a17b31f334f0daf2e13c0750ffde1" class="tab" ><label for="5f7a17b31f334f0daf2e13c0750ffde1-5442053347d24c15a47c317840c72044" >Startup</label>
+<input type="radio" id="5f7a17b31f334f0daf2e13c0750ffde1-52deb8c31054412b9e620a4440e9ff08" name="5f7a17b31f334f0daf2e13c0750ffde1" class="tab" ><label for="5f7a17b31f334f0daf2e13c0750ffde1-52deb8c31054412b9e620a4440e9ff08" >Android</label>
+<input type="radio" id="5f7a17b31f334f0daf2e13c0750ffde1-7465aeb29d874e8691c3da46c2773a3c" name="5f7a17b31f334f0daf2e13c0750ffde1" class="tab" ><label for="5f7a17b31f334f0daf2e13c0750ffde1-7465aeb29d874e8691c3da46c2773a3c" >iOS</label>
+<input type="radio" id="5f7a17b31f334f0daf2e13c0750ffde1-90e2b7838efb4b5d8c74d52f71374757" name="5f7a17b31f334f0daf2e13c0750ffde1" class="tab" ><label for="5f7a17b31f334f0daf2e13c0750ffde1-90e2b7838efb4b5d8c74d52f71374757" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Locations.IGpsManager
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge&label=Shiny.Locations" /></a>|
+|Static Generated Class|ShinyGps</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseGps&amp;lt;Shiny.Locations.IGpsDelegate&amp;gt;();&lt;/p&gt;
+&lt;p&gt;services.UseGps();
+services.UseGps 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+<h3>AndroidManifest.xml</h3>
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
+&lt;manifest xmlns:android=&quot;http://schemas.android.com/apk/res/android&quot; android:versionCode=&quot;1&quot; android:versionName=&quot;1.0&quot; package=&quot;com.org.yourapp&quot; android:installLocation=&quot;preferExternal&quot;&gt;
+    &lt;uses-permission android:name=&quot;android.permission.ACCESS_COARSE_LOCATION&quot; /&gt;
+    &lt;uses-permission android:name=&quot;android.permission.ACCESS_FINE_LOCATION&quot; /&gt;
+    &lt;uses-permission android:name=&quot;android.permission.ACCESS_BACKGROUND_LOCATION&quot; /&gt;
+    &lt;uses-permission android:name=&quot;android.permission.FOREGROUND_SERVICE&quot; /&gt;
+    &lt;uses-feature android:name=&quot;android.hardware.location.gps&quot; /&gt;
+    &lt;uses-feature android:name=&quot;android.hardware.location.network&quot; /&gt;
+&lt;/manifest&gt;
+</code></pre>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+<h3>Info.plist</h3>
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
+&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
+&lt;plist version=&quot;1.0&quot;&gt;
+&lt;dict&gt;
+    &lt;key&gt;NSLocationAlwaysUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+    &lt;key&gt;NSLocationAlwaysAndWhenInUseUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+    &lt;key&gt;NSLocationWhenInUseUsageDescription&lt;/key&gt;
+    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
+&lt;/dict&gt;
+&lt;/plist&gt;
+</code></pre>
+</div>
+<div class="tab__content">
+<h3>Package.appxmanifest</h3>
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
+&lt;Package&gt;
+    &lt;Applications&gt;
+    &lt;/Applications&gt;
+    &lt;Capabilities&gt;
+        &lt;DeviceCapability Name=&quot;location&quot; /&gt;
+    &lt;/Capabilities&gt;
+&lt;/Package&gt;
+</code></pre>
+</div>
+</div>
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
 using Shiny;
 
@@ -407,7 +448,7 @@ namespace Shiny.Locations
         /// &lt;summary&gt;
         /// This is fired when the gps reading has changed. 
         /// &lt;/summary&gt;
-        /// &lt;param name="reading"&gt;The gps reading.&lt;/param&gt;
+        /// &lt;param name=&quot;reading&quot;&gt;The gps reading.&lt;/param&gt;
         Task OnReading(IGpsReading reading);
     }
 }
@@ -509,5 +550,5 @@ public class GpsUsage
             }
         });
     </script>
-
-</body></html>
+</body>
+</html>
