--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -105,9 +105,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -311,6 +308,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,7 +327,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -335,48 +338,50 @@
                                     <p>You may ask "what does local notifications" have to do with device or background services?  Well.... turns out quite a bit.  You need a way
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
-<table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge&amp;label=Shiny.Notifications"></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Notifications.INotificationManager</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseNotifications</td>
-</tr>
-<tr>
-<td><strong>Delegate</strong></td>
-<td>Shiny.Notifications.INotificationDelegate</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyNotifications</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+<div class="tab-wrap">
+<input type="radio" id="90abd7aaa1f24d46b84340da21113e46-445563530107404e9fa17a78c4a35474" name="90abd7aaa1f24d46b84340da21113e46" class="tab" checked=""><label for="90abd7aaa1f24d46b84340da21113e46-445563530107404e9fa17a78c4a35474">General</label>
+<input type="radio" id="90abd7aaa1f24d46b84340da21113e46-1eee789192ed4543abcc129a352d2d49" name="90abd7aaa1f24d46b84340da21113e46" class="tab"><label for="90abd7aaa1f24d46b84340da21113e46-1eee789192ed4543abcc129a352d2d49">Startup</label>
+<input type="radio" id="90abd7aaa1f24d46b84340da21113e46-acee279ee1d949108d39e2be16559756" name="90abd7aaa1f24d46b84340da21113e46" class="tab"><label for="90abd7aaa1f24d46b84340da21113e46-acee279ee1d949108d39e2be16559756">Android</label>
+<input type="radio" id="90abd7aaa1f24d46b84340da21113e46-c435eb61c7ca48608a7b8aefcb6655f9" name="90abd7aaa1f24d46b84340da21113e46" class="tab"><label for="90abd7aaa1f24d46b84340da21113e46-c435eb61c7ca48608a7b8aefcb6655f9">iOS</label>
+<input type="radio" id="90abd7aaa1f24d46b84340da21113e46-88be7cbb30aa40f093a4a1f819e5e5c1" name="90abd7aaa1f24d46b84340da21113e46" class="tab"><label for="90abd7aaa1f24d46b84340da21113e46-88be7cbb30aa40f093a4a1f819e5e5c1">Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description|Local Notifications|
+|Service|Shiny.Notifications.INotificationManager
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge&amp;label=Shiny.Notifications"></a>|
+|Static Generated Class|ShinyNotifications</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseNotifications&amp;lt;Shiny.Notifications.INotificationDelegate&amp;gt;();&lt;/p&gt;
+&lt;p&gt;services.UseNotifications();
+services.UseNotifications 
+        }
+    }
+}
+</code></pre>
+<p></p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 <h2 id="ios-specifics">iOS Specifics</h2>
 <p>There isn't anything specific to setting up local notifications on iOS.  However,
 iOS has one specific rule - While the application  is running in the <strong>FOREGROUND</strong>, notifications will not be displayed.
