--- a/push/getting-started.html
+++ b/push/getting-started.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -340,26 +343,6 @@ like flies the last several years.  The latest to go was AppCenter which it turn
 <p>General OS setup is mostly the same on all platforms, but please review the specific provider you intend to use from the menu for more information</p>
 <h2 id="registration">Registration</h2>
 <p>Look to each appropriate provider to see setups for each.  The most important function otherwise, is RequestAccess shown below which will give you the push notification token that you can send to your backend.</p>
-<pre><code class="language-cs">using System;
-using Microsoft.Extensions.DependencyInjection;
-using Shiny;
-
-
-public class PushStartup : ShinyStartup
-{
-    public override void ConfigureServices(IServiceCollection services)
-    {
-        // you can only register one :)
-        // NOTE: these also all take a notification category if you wish to have actions available
-        // on the user notification
-        services.UsePush&lt;PushDelegate&gt;();
-
-        services.UsePushAzureNotificationHubs&lt;PushDelegate&gt;(&quot;connection string&quot;, &quot;hub name&quot;);
-        services.UseFirebaseMessaging&lt;PushDelegate&gt;();
-        services.UseOneSignalPush&lt;PushDelegate&gt;(new Shiny.Push.OneSignal.OneSignalPushConfig(&quot;onesignal appId&quot;));
-    }
-}
-</code></pre>
 <p>All providers use the native implementations on the platform to some degree, as such, you will always need to call</p>
 <pre><code class="language-cs">using System;
 using System.Threading.Tasks;
