--- a/release-notes/v201.html
+++ b/release-notes/v201.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Pedometer</title>
+    <title>Shiny.NET - v2.0-preview (May 7, 2021)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Pedometer</div>
+                                <div class="text-white m-0 title">v2.0-preview (May 7, 2021)</div>
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/sensors/getting-started">Getting Started</a>
                                                         </div>
@@ -287,7 +287,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/sensors/magnetometer">Magnetometer</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/sensors/pedometer">Pedometer</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,79 +327,31 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <div class="tab-wrap">
-<input type="radio" id="ae023671c65746abb665975bafc8fbc6-dd77355da6b54b098db7819d970690bb" name="ae023671c65746abb665975bafc8fbc6" class="tab" checked><label for="ae023671c65746abb665975bafc8fbc6-dd77355da6b54b098db7819d970690bb" >General</label>
-<input type="radio" id="ae023671c65746abb665975bafc8fbc6-76a8922770f1478a8517569c9eb62780" name="ae023671c65746abb665975bafc8fbc6" class="tab" ><label for="ae023671c65746abb665975bafc8fbc6-76a8922770f1478a8517569c9eb62780" >Startup</label>
-<input type="radio" id="ae023671c65746abb665975bafc8fbc6-970ac1b47bba4f9784fe8058424b6f43" name="ae023671c65746abb665975bafc8fbc6" class="tab" ><label for="ae023671c65746abb665975bafc8fbc6-970ac1b47bba4f9784fe8058424b6f43" >Android</label>
-<input type="radio" id="ae023671c65746abb665975bafc8fbc6-a750cd5e105949e69908cc30ba15493e" name="ae023671c65746abb665975bafc8fbc6" class="tab" ><label for="ae023671c65746abb665975bafc8fbc6-a750cd5e105949e69908cc30ba15493e" >iOS</label>
-<input type="radio" id="ae023671c65746abb665975bafc8fbc6-ede402cd6d31420fba9fe7941788aad5" name="ae023671c65746abb665975bafc8fbc6" class="tab" ><label for="ae023671c65746abb665975bafc8fbc6-ede402cd6d31420fba9fe7941788aad5" >Windows</label>
-<div class="tab__content">
-<p>|Area|Info|
-|---|---|
-|Description||
-|Service|Shiny.Sensors.IPedometer
-|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyPedometer</p>
-</div>
-<div class="tab__content">
-<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
-using Shiny;
-
-namespace YourNamespace
-{
-    public class YourShinyStartup : ShinyStartup
-    {
-        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
-        { 
-            
-&lt;p&gt;services.UsePedometer 
-        }
-    }
-}
-</code></pre>
-</p>
-</div>
-<div class="tab__content">
-<h2>Minimum Version: 8.0</h2>
-</div>
-<div class="tab__content">
-<h2>Minimum Version: 10</h2>
-<h3>Info.plist</h3>
-<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
-&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
-&lt;plist version=&quot;1.0&quot;&gt;
-&lt;dict&gt;
-    &lt;key&gt;NSMotionUsageDescription&lt;/key&gt;
-    &lt;string&gt;Say something useful here that your users will understand&lt;/string&gt;
-&lt;/dict&gt;
-&lt;/plist&gt;
-</code></pre>
-</div>
-<div class="tab__content">
-<p>No Special Configuration Required</p>
-</div>
-</div>
-<h3 id="ios">iOS</h3>
-<p>If you plan to use the pedometer on iOS, you need to add the following to your Info.plist</p>
-<pre><code class="language-xml">&lt;dict&gt;
-	&lt;key&gt;NSMotionUsageDescription&lt;/key&gt;
-	&lt;string&gt;Using some motion&lt;/string&gt;
-&lt;/dict&gt;
-</code></pre>
+                                    <h2 id="code-generator">Code Generator</h2>
+<ul>
+<li>[Fix][iOS] MSAL wireup had a bad reference</li>
+<li>[Fix] Improve root namespace detection to deal with weird project/assembly names</li>
+</ul>
+<h2 id="bluetoothle">BluetoothLE</h2>
+<ul>
+<li>[Fix] Managed Peripheral was not respecting notify vs indicate when restoring subscriptions</li>
+<li>[Fix][Android] BLE Delegate OnConnected <a href="https://github.com/shinyorg/shiny/pull/579">PR</a></li>
+<li>[Android] Improved synchronization mechanism</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/pedometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/release-notes/v201.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
