--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,49 +329,56 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Sensors.IAccelerometer</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseAccelerometer</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyAccelerometer</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <div class="tab-wrap">
+<input type="radio" id="31cbc9ccee8a4d25982bf2892dfb33cf-7e73d9cd14394fbe9e11f1333c991e9e" name="31cbc9ccee8a4d25982bf2892dfb33cf" class="tab" checked><label for="31cbc9ccee8a4d25982bf2892dfb33cf-7e73d9cd14394fbe9e11f1333c991e9e" >General</label>
+<input type="radio" id="31cbc9ccee8a4d25982bf2892dfb33cf-82c3898f6bed4630b5aac19bd33950e7" name="31cbc9ccee8a4d25982bf2892dfb33cf" class="tab" ><label for="31cbc9ccee8a4d25982bf2892dfb33cf-82c3898f6bed4630b5aac19bd33950e7" >Startup</label>
+<input type="radio" id="31cbc9ccee8a4d25982bf2892dfb33cf-dbed232fe64e4b8895ed71dec2409da8" name="31cbc9ccee8a4d25982bf2892dfb33cf" class="tab" ><label for="31cbc9ccee8a4d25982bf2892dfb33cf-dbed232fe64e4b8895ed71dec2409da8" >Android</label>
+<input type="radio" id="31cbc9ccee8a4d25982bf2892dfb33cf-c3eb448d815f47a7aa77fabac0794b28" name="31cbc9ccee8a4d25982bf2892dfb33cf" class="tab" ><label for="31cbc9ccee8a4d25982bf2892dfb33cf-c3eb448d815f47a7aa77fabac0794b28" >iOS</label>
+<input type="radio" id="31cbc9ccee8a4d25982bf2892dfb33cf-17d3b801e5684785aee1fc7f585ced6d" name="31cbc9ccee8a4d25982bf2892dfb33cf" class="tab" ><label for="31cbc9ccee8a4d25982bf2892dfb33cf-17d3b801e5684785aee1fc7f585ced6d" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description|Accelerometer|
+|Service|Shiny.Sensors.IAccelerometer
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
+|Static Generated Class|ShinyAccelerometer</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseAccelerometer 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
