--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,45 +329,52 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Sensors.IAmbientLight</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseAmbientLight</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyAmbientLight</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <div class="tab-wrap">
+<input type="radio" id="c125f963a2364048943eaaf6bc6c8b39-3ace006326fd4e31a950753befe76386" name="c125f963a2364048943eaaf6bc6c8b39" class="tab" checked><label for="c125f963a2364048943eaaf6bc6c8b39-3ace006326fd4e31a950753befe76386" >General</label>
+<input type="radio" id="c125f963a2364048943eaaf6bc6c8b39-a12e45878bbf4939a1d28f4e501fd33b" name="c125f963a2364048943eaaf6bc6c8b39" class="tab" ><label for="c125f963a2364048943eaaf6bc6c8b39-a12e45878bbf4939a1d28f4e501fd33b" >Startup</label>
+<input type="radio" id="c125f963a2364048943eaaf6bc6c8b39-8d5346c7217f4b3d93001e150af8aaf8" name="c125f963a2364048943eaaf6bc6c8b39" class="tab" ><label for="c125f963a2364048943eaaf6bc6c8b39-8d5346c7217f4b3d93001e150af8aaf8" >Android</label>
+<input type="radio" id="c125f963a2364048943eaaf6bc6c8b39-d74f52b0761a4c2bb6c39ff3642e7bb7" name="c125f963a2364048943eaaf6bc6c8b39" class="tab" ><label for="c125f963a2364048943eaaf6bc6c8b39-d74f52b0761a4c2bb6c39ff3642e7bb7" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Sensors.IAmbientLight
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
+|Static Generated Class|ShinyAmbientLight</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseAmbientLight 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
