--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,49 +329,56 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Sensors.IBarometer</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseBarometer</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyBarometer</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <div class="tab-wrap">
+<input type="radio" id="fc4c2988f29848e3a965936470756a4d-21cca77d266b43508584af1dd9a250d2" name="fc4c2988f29848e3a965936470756a4d" class="tab" checked><label for="fc4c2988f29848e3a965936470756a4d-21cca77d266b43508584af1dd9a250d2" >General</label>
+<input type="radio" id="fc4c2988f29848e3a965936470756a4d-7a6e519a0eaf44279878546f869bff88" name="fc4c2988f29848e3a965936470756a4d" class="tab" ><label for="fc4c2988f29848e3a965936470756a4d-7a6e519a0eaf44279878546f869bff88" >Startup</label>
+<input type="radio" id="fc4c2988f29848e3a965936470756a4d-6ccf8a3706fc456180c7eaeee71a9aea" name="fc4c2988f29848e3a965936470756a4d" class="tab" ><label for="fc4c2988f29848e3a965936470756a4d-6ccf8a3706fc456180c7eaeee71a9aea" >Android</label>
+<input type="radio" id="fc4c2988f29848e3a965936470756a4d-d31bfa132f5a45dc9a514db478223f54" name="fc4c2988f29848e3a965936470756a4d" class="tab" ><label for="fc4c2988f29848e3a965936470756a4d-d31bfa132f5a45dc9a514db478223f54" >iOS</label>
+<input type="radio" id="fc4c2988f29848e3a965936470756a4d-67a49146f6f4495cbd124e82fb5b1615" name="fc4c2988f29848e3a965936470756a4d" class="tab" ><label for="fc4c2988f29848e3a965936470756a4d-67a49146f6f4495cbd124e82fb5b1615" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Sensors.IBarometer
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
+|Static Generated Class|ShinyBarometer</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseBarometer 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
