--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,49 +329,56 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Sensors.IGyroscope</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseGyroscope</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyGyroscope</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <div class="tab-wrap">
+<input type="radio" id="f34dac630ba14122a3d13b1d41b30805-ced5e02b6fc64eb38ccfb2ae3881ba7b" name="f34dac630ba14122a3d13b1d41b30805" class="tab" checked><label for="f34dac630ba14122a3d13b1d41b30805-ced5e02b6fc64eb38ccfb2ae3881ba7b" >General</label>
+<input type="radio" id="f34dac630ba14122a3d13b1d41b30805-af444517fa144724bdc323fe1a80539f" name="f34dac630ba14122a3d13b1d41b30805" class="tab" ><label for="f34dac630ba14122a3d13b1d41b30805-af444517fa144724bdc323fe1a80539f" >Startup</label>
+<input type="radio" id="f34dac630ba14122a3d13b1d41b30805-f1af9748d8f648c5adb2dfe97526fb0c" name="f34dac630ba14122a3d13b1d41b30805" class="tab" ><label for="f34dac630ba14122a3d13b1d41b30805-f1af9748d8f648c5adb2dfe97526fb0c" >Android</label>
+<input type="radio" id="f34dac630ba14122a3d13b1d41b30805-7450f1c10d2b4e1d8b0f771fd34ea049" name="f34dac630ba14122a3d13b1d41b30805" class="tab" ><label for="f34dac630ba14122a3d13b1d41b30805-7450f1c10d2b4e1d8b0f771fd34ea049" >iOS</label>
+<input type="radio" id="f34dac630ba14122a3d13b1d41b30805-ebc7be9ececb4365a5e14a517fd48161" name="f34dac630ba14122a3d13b1d41b30805" class="tab" ><label for="f34dac630ba14122a3d13b1d41b30805-ebc7be9ececb4365a5e14a517fd48161" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Sensors.IGyroscope
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
+|Static Generated Class|ShinyGyroscope</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseGyroscope 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
