--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,49 +329,56 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Info</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a></td>
-</tr>
-<tr>
-<td><strong>Service</strong></td>
-<td>Shiny.Sensors.IMagnetometer</td>
-</tr>
-<tr>
-<td><strong>Startup</strong></td>
-<td>services.UseMagnetometer</td>
-</tr>
-<tr>
-<td><strong>Static</strong></td>
-<td>ShinyMagnetometer</td>
-</tr>
-<tr>
-<td>- <em>iOS</em></td>
-<td>9</td>
-</tr>
-<tr>
-<td>- <em>Android</em></td>
-<td>8.0</td>
-</tr>
-<tr>
-<td>- <em>Uwp</em></td>
-<td>17763</td>
-</tr>
-</tbody>
-</table>
+                                    <div class="tab-wrap">
+<input type="radio" id="09ddd5cb02c9429ca918ed25f86af22f-9bdb32455d2742d1b2c90ad8f193829c" name="09ddd5cb02c9429ca918ed25f86af22f" class="tab" checked><label for="09ddd5cb02c9429ca918ed25f86af22f-9bdb32455d2742d1b2c90ad8f193829c" >General</label>
+<input type="radio" id="09ddd5cb02c9429ca918ed25f86af22f-1bd12c038bf64d1a925d64626da2564f" name="09ddd5cb02c9429ca918ed25f86af22f" class="tab" ><label for="09ddd5cb02c9429ca918ed25f86af22f-1bd12c038bf64d1a925d64626da2564f" >Startup</label>
+<input type="radio" id="09ddd5cb02c9429ca918ed25f86af22f-0d8fa3158f9249ce8ffdf32c35936adf" name="09ddd5cb02c9429ca918ed25f86af22f" class="tab" ><label for="09ddd5cb02c9429ca918ed25f86af22f-0d8fa3158f9249ce8ffdf32c35936adf" >Android</label>
+<input type="radio" id="09ddd5cb02c9429ca918ed25f86af22f-995c0faacecf45b7a7b058c383ced73b" name="09ddd5cb02c9429ca918ed25f86af22f" class="tab" ><label for="09ddd5cb02c9429ca918ed25f86af22f-995c0faacecf45b7a7b058c383ced73b" >iOS</label>
+<input type="radio" id="09ddd5cb02c9429ca918ed25f86af22f-b1463b933e2046b1a6a05a8aee0946b1" name="09ddd5cb02c9429ca918ed25f86af22f" class="tab" ><label for="09ddd5cb02c9429ca918ed25f86af22f-b1463b933e2046b1a6a05a8aee0946b1" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Sensors.IMagnetometer
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
+|Static Generated Class|ShinyMagnetometer</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseMagnetometer 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
