--- a/setup/boilerplate.html
+++ b/setup/boilerplate.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -360,7 +363,6 @@
 </ol>
 </li>
 <li>Xamarin Forms app can be hooked and Init called for you automatically</li>
-<li>If you use Xamarin Forms dependency service, Shiny will auto-inject itself and all of the services you register with Shiny into it.  (ie. DependencyService.Get<IJobManager>())</li>
 <li>Any classes marked with [Shiny.ShinyServiceAttribute] will be added and available to the container under all interfaces it implements</li>
 </ol>
 <h2 id="shiny-also-auto-adds-popular-3rd-party-initialization-for">Shiny also auto-adds popular 3rd party initialization for</h2>
@@ -371,6 +373,7 @@
 <li><a href="https://github.com/muak/AiForms.SettingsView">AIForms Settings View</a></li>
 <li><a href="https://github.com/Baseflow/XF-Material-Library">XF Material</a></li>
 <li><a href="https://github.com/rotorgames/Rg.Plugins.Popup">RG Popups</a></li>
+<li><a href="https://github.com/AzureAD/microsoft-authentication-library-for-dotnet">Microsoft Identity Client (MSAL)</a></li>
 </ul>
 <h2 id="special-considerations">Special Considerations</h2>
 <ol>
