--- a/setup/ios.html
+++ b/setup/ios.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -396,8 +399,9 @@ public partial class AppDelegate
     {
         this.OnPreFinishedLaunching(app, options);
         this.ShinyFinishedLaunching(new Samples.SampleStartup());
+        this.LoadApplication(new Samples.App());        
         global::Xamarin.Forms.Forms.Init();
-        this.LoadApplication(new Samples.App());
+        
         global::XF.Material.iOS.Material.Init();
         this.OnPostFinishedLaunching(app, options);
         return base.FinishedLaunching(app, options);
@@ -410,14 +414,11 @@ public partial class AppDelegate
     public override void RegisteredForRemoteNotifications(UIApplication application, NSData deviceToken) 
         =&gt; this.ShinyRegisteredForRemoteNotifications(deviceToken);
 
-    public override void ReceivedRemoteNotification(UIApplication application, NSDictionary userInfo) 
-        =&gt; this.ShinyDidReceiveRemoteNotification(userInfo, null);
+    public override void FailedToRegisterForRemoteNotifications(UIApplication application, NSError error) 
+        =&gt; this.ShinyFailedToRegisterForRemoteNotifications(error);
 
     public override void DidReceiveRemoteNotification(UIApplication application, NSDictionary userInfo, Action&lt;UIBackgroundFetchResult&gt; completionHandler) 
         =&gt; this.ShinyDidReceiveRemoteNotification(userInfo, completionHandler);
-
-    public override void FailedToRegisterForRemoteNotifications(UIApplication application, NSError error) 
-        =&gt; this.ShinyFailedToRegisterForRemoteNotifications(error);
 
     /*
     THIS METHOD IS NEEDED BY MOST OF SHINY - ALWAYS ADD IT
