--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -107,9 +107,6 @@
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/nuget">NuGet Packages</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/statics">Static Class Generation</a>
                                                         </div>
                                                 </div>
@@ -313,6 +310,9 @@
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/appservices/gpstags">GPS Tags</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -329,7 +329,10 @@
 <a href="/release-notes">Release Notes</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v20">v2.0.0 (April 24, 2021)</a>
+                                                            <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v201">v2.0-preview (May 7, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -339,21 +342,6 @@
 <li>Add the following to your App.xaml.cs constructor</li>
 </ol>
 <pre><code class="language-csharp">this.ShinyInit(new YourStartup());
-</code></pre>
-<p>Manifest</p>
-<pre><code class="language-xml">&lt;Extension Category=&quot;windows.backgroundTasks&quot; EntryPoint=&quot;Shiny.ShinyBackgroundTask&quot;&gt;
-    &lt;BackgroundTasks&gt;
-        &lt;Task Type=&quot;general&quot;/&gt;
-        &lt;Task Type=&quot;systemEvent&quot;/&gt;
-        &lt;Task Type=&quot;timer&quot;/&gt;
-    &lt;/BackgroundTasks&gt;
-&lt;/Extension&gt;
-</code></pre>
-<pre><code class="language-xml">&lt;Capabilities&gt;
-    &lt;Capability Name=&quot;internetClient&quot; /&gt;
-    &lt;DeviceCapability Name=&quot;bluetooth&quot; /&gt;
-    &lt;DeviceCapability Name=&quot;location&quot; /&gt;
-&lt;/Capabilities&gt;
 </code></pre>
 
                                 </div>
